Added section for speedrun, updated horde ranking

--- a/horde.html
+++ b/horde.html
@@ -28,8 +28,8 @@
 
     <!-- BODY Content -->
     <div class="d-flex justify-content-center my-4">
-        <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
-            <input type="radio" class="btn-check" name="btnradio" id="btnradio0" checked>
+        <div class="btn-group" role="group" aria-label="horde">
+            <input type="radio" class="btn-check" name="btnradio" id="btnradio0">
             <label class="btn btn-outline-light" for="btnradio0">BRIEF</label>
 
             <input type="radio" class="btn-check" name="btnradio" id="btnradio1">
@@ -37,10 +37,120 @@
 
             <input type="radio" class="btn-check" name="btnradio" id="btnradio2">
             <label class="btn btn-outline-light" for="btnradio2">NORMAL</label>
+        </div>
+    </div>
 
+    <div class="d-flex justify-content-center my-4">
+        <div class="btn-group" role="group" aria-label="extreme">
+
+            <input type="radio" class="btn-check" name="btnradio2" id="speedrunE">
+            <label class="btn btn-outline-light" for="speedrunE">Speedrun (Map)<br><img src="images/redskull.png"><img src="images/redskull.png"><img src="images/redskull.png"><img src="images/redskull.png"><img src="images/redskull.png"></label>
+
+            <input type="radio" class="btn-check" name="btnradio2" id="speedrunE2" checked>
+            <label class="btn btn-outline-light" for="speedrunE2">Speedrun (Chapter) <br><img src="images/redskull.png"><img src="images/redskull.png"><img src="images/redskull.png"><img src="images/redskull.png"><img src="images/redskull.png"></label>
+        </div>
+    </div>
+
+    <!-- CODE DIVISION -->
+    <div class="BOX3">
+        <!-- <div class="col-md-8 col-12 my-4 mx-auto px-3">
+            <table class="table table-striped table-borderless rounded-5 table-dark">
+                <thead>
+                    <tr class="align-middle font-monospace fs-5">
+                        <th scope="col" class="text-info">Map</th>
+                        <th scope="col" class="text-info">Player</th>
+                        <th scope="col" class="text-info">Time</th>
+                        <th scope="col" class="text-info">Src</th>
+                    </tr>
+                </thead>
+                <tbody class="font-monospace">
+                    <tr>
+                        <td>TOKYO <i class="fa-solid fa-people-group text-success"></i></td>
+                        <td>SiberianPsych0</td>
+                        <td>28<small>m</small> 42<small>s</small></td>
+                        <td><a href="https://www.youtube.com/watch?v=AiV7wZiSWa0&ab_channel=SiberianPsych0" target="_blank">Full</a></td>
+                    </tr>
+                    <tr>
+                        <td>TOKYO <i class="fa-solid fa-people-group text-success"></i></td>
+                        <td>Lucy#64</td>
+                        <td>29<small>m</small> 52<small>s</small></td>
+                        <td><a href="https://www.youtube.com/watch?v=KYU_-6Kd1MY&ab_channel=%E3%82%8B%E3%83%BC%E3%81%97%E3%81%83" target="_blank">Full</a></td>
+                    </tr>
+                    <tr>
+                        <td>TOKYO <i class="fa-solid fa-people-group text-success"></i></td>
+                        <td>ShyKool</td>
+                        <td>33<small>m</small> 23<small>s</small></td>
+                        <td><a href="https://www.youtube.com/watch?v=QBW4TxRAulQ&ab_channel=shythe" target="_blank">Full</a></td>
+                    </tr>
+                    <tr>
+                        <td>TOKYO <i class="fa-solid fa-people-group text-success"></i></td>
+                        <td>CherryNomad</td>
+                        <td>39<small>m</small> 27<small>s</small></td>
+                        <td><a href="https://www.youtube.com/watch?v=aKsYg8Ob99Q&ab_channel=CherryNomad" target="_blank">Full</a></td>
+                    </tr>
+                </tbody>
+            </table>
+
+            <div class="card w-50 my-4 text-bg-warning mx-auto">
+                <h5 class="card-header text-center">Speedrun: Criteria </h5>
+                <div class="card-body">
+                    <p class="card-text"> • Start: After Initial Cutscene.<br> • End: Final Objective Completion.</p>
+                </div>
+            </div> -->
+
+        <div class="card w-50 my-4 text-bg-warning mx-auto">
+            <h5 class="card-header text-center">Under Maintenance </h5>
+            <div class="card-body">
+                <p class="card-text text-center">LACK OF PLAYERBASE & SUBMISSION. WILL REVIVE WHEN DEMAND RISE.</p>
+            </div>
+        </div>
+
+    </div>
+    </div>
+    <!-- CODE DIVISION -->
+    <div class="BOX4">
+        <!-- <div class="col-md-8 col-12 my-4 mx-auto">
+            <table class="table table-striped table-borderless rounded-5 table-dark">
+                <thead>
+                    <tr class="align-middle font-monospace fs-5">
+                        <th scope="col" class="text-info">Map</th>
+                        <th scope="col" class="text-info">Player</th>
+                        <th scope="col" class="text-info">Time</th>
+                        <th scope="col" class="text-info">Src</th>
+                    </tr>
+                </thead>
+                <tbody class="font-monospace">
+                    <tr>
+                        <td>NEW YORK 1</td>
+                        <td>xD3viLz</td>
+                        <td>6<small>m</small> 16<small>s</small></td>
+                        <td><a href="https://www.youtube.com/watch?v=bFg62xUW6_E&ab_channel=xD3viLz" target="_blank">Full</a></td>
+                    </tr>
+                    <tr>
+                        <td>NEW YORK 4</td>
+                        <td>xD3viLz</td>
+                        <td>8<small>m</small> 55<small>s</small></td>
+                        <td><a href="https://www.youtube.com/watch?v=ZqBcznjD0pg&ab_channel=xD3viLz" target="_blank">Full</a></td>
+                    </tr>
+                </tbody>
+            </table>
+
+            <div class="card w-50 my-4 text-bg-warning mx-auto">
+                <h5 class="card-header text-center">Speedrun: Criteria </h5>
+                <div class="card-body">
+                    <p class="card-text"> • Start: After Initial Cutscene.<br> • End: Final Objective Completion.</p>
+                </div>
+            </div>
+        </div> -->
+        <div class="card w-50 my-4 text-bg-warning mx-auto">
+            <h5 class="card-header text-center">Under Maintenance </h5>
+            <div class="card-body">
+                <p class="card-text text-center">LACK OF PLAYERBASE & SUBMISSION. WILL REVIVE WHEN DEMAND RISE.</p>
+            </div>
         </div>
     </div>
     <!-- CODE DIVISION -->
+
     <div class="BOX0">
         <div class="col-md-8 col-12 my-4 mx-auto">
             <div>
@@ -101,8 +211,15 @@
                     </tr>
                     <tr class="text-center align-middle">
                         <td class="text-warning">SOUTH KOREA (N)</td>
-                        <td>Avoki</td>
-                        <td><small class="h4 text-danger text-bold">85</small></td>
+                        <td class="dropup">
+                            <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">Avoki</button>
+                            <ul class="dropdown-menu z-3 bg-secondary text-center fw-bold">
+                                <li><small class="dropdown-item-text text-light">bolaxadomar</small></li>
+                                <li><small class="dropdown-item-text text-light">CristianKD_</small></li>
+                                <li><small class="dropdown-item-text text-light">Mano_Pipoca</small></li>
+                            </ul>
+                        </td>
+                        <td><small class="h3 text-warning text-bold">101</small></td>
                     </tr>
                     <tr class="text-center align-middle">
                         <td class="text-warning">NEW YORK (N)</td>
@@ -288,11 +405,18 @@
                 <tbody>
                     <tr class="text-center align-middle">
                         <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group text-success"></i></th>
-                        <td>Avoki</td>
-                        <td>85</td>
-                        <td><a href="https://www.youtube.com/watch?v=zxg8YUJtZ_M&ab_channel=luisfelipemognon" target="_blank">Full</a>
+                        <td class="dropup">
+                            <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">Avoki</button>
+                            <ul class="dropdown-menu z-3 bg-secondary text-center fw-bold">
+                                <li><small class="dropdown-item-text text-light">bolaxadomar</small></li>
+                                <li><small class="dropdown-item-text text-light">CristianKD_</small></li>
+                                <li><small class="dropdown-item-text text-light">Mano_Pipoca</small></li>
+                            </ul>
+                        </td>
+                        <td>101</td>
+                        <td><a href="https://www.youtube.com/watch?v=KgaB9Hxr0_A&ab_channel=luisfelipemognon" target="_blank">Full</a>
                             <br>
-                            <small>Sep 2023</small>
+                            <small>Oct 2023</small>
                         </td>
                     </tr>
                     <tr class="text-center align-middle">
