--- a/horde.html
+++ b/horde.html
@@ -29,7 +29,7 @@
     <!-- BODY Content -->
     <div class="d-flex justify-content-center my-4">
         <div class="btn-group" role="group" aria-label="horde">
-            <input type="radio" class="btn-check" name="btnradio" id="btnradio0">
+            <input type="radio" class="btn-check" name="btnradio" id="btnradio0" checked>
             <label class="btn btn-outline-light" for="btnradio0">BRIEF</label>
 
             <input type="radio" class="btn-check" name="btnradio" id="btnradio1">
@@ -46,7 +46,7 @@
             <input type="radio" class="btn-check" name="btnradio2" id="speedrunE">
             <label class="btn btn-outline-light" for="speedrunE">Speedrun (Map)<br><img src="images/redskull.png"><img src="images/redskull.png"><img src="images/redskull.png"><img src="images/redskull.png"><img src="images/redskull.png"></label>
 
-            <input type="radio" class="btn-check" name="btnradio2" id="speedrunE2" checked>
+            <input type="radio" class="btn-check" name="btnradio2" id="speedrunE2">
             <label class="btn btn-outline-light" for="speedrunE2">Speedrun (Chapter) <br><img src="images/redskull.png"><img src="images/redskull.png"><img src="images/redskull.png"><img src="images/redskull.png"><img src="images/redskull.png"></label>
         </div>
     </div>
@@ -167,13 +167,13 @@
                 <tbody class="font-monospace">
                     <tr class="text-center align-middle">
                         <td class="text-danger">XL TOKYO (H)</td>
-                        <td>SiberianPsych0</td>
+                        <td><img src="images/whiteskull.png"> SiberianPsych0 <img src="images/whiteskull.png"></td>
                         <td>57</td>
                     </tr>
                     <tr class="text-center align-middle">
                         <td class="text-danger">XL ROME (H)</td>
                         <td class="dropup">
-                            <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">Horde Legends Team</button>
+                            <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false"><img src="images/sword.png"><img src="images/yellowskull.png"> Horde Legends Team</button><img src="images/yellowskull.png"><img src="images/sword.png">
                             <ul class="dropdown-menu z-3 bg-secondary text-center fw-bold">
                                 <li><small class="dropdown-item-text text-light">gogu7382</small></li>
                                 <li><small class="dropdown-item-text text-light">LegioX Wintersky</small></li>
@@ -186,33 +186,33 @@
                     </tr>
                     <tr class="text-center align-middle">
                         <td class="text-danger">SOUTH KOREA (H)</td>
-                        <td>睡姿决定发型</td>
+                        <td><img src="images/oni.png"><img src="images/redskull.png"> 睡姿决定发型 <img src="images/redskull.png"><img src="images/oni.png"></td>
                         <td><small class="h4 text-danger text-bold">86</small></td>
                     </tr>
                     <tr class="text-center align-middle">
                         <td class="text-danger">NEW YORK (H)</td>
-                        <td>貓白</td>
+                        <td><img src="images/oni.png"><img src="images/redskull.png"> 貓白 <img src="images/redskull.png"><img src="images/oni.png"></td>
                         <td><small class="h4 text-danger text-bold">82</small></td>
                     </tr>
                     <tr class="text-center align-middle">
                         <td class="text-danger">JERUSALEM (H)</td>
-                        <td>睡姿决定发型</td>
+                        <td><img src="images/oni.png"><img src="images/redskull.png"> 睡姿决定发型 <img src="images/redskull.png"><img src="images/oni.png"></td>
                         <td><small class="h4 text-danger text-bold">81</small></td>
                     </tr>
                     <tr class="text-center align-middle">
                         <td class="text-warning">XL TOKYO (N)</td>
-                        <td>Senku_Jo</td>
+                        <td><img src="images/whiteskull.png"> Senku_Jo <img src="images/whiteskull.png"></td>
                         <td>66</td>
                     </tr>
                     <tr class="text-center align-middle">
                         <td class="text-warning">XL ROME (N)</td>
-                        <td>E7S4</td>
+                        <td><img src="images/whiteskull.png"> E7S4 <img src="images/whiteskull.png"></td>
                         <td>42</td>
                     </tr>
                     <tr class="text-center align-middle">
                         <td class="text-warning">SOUTH KOREA (N)</td>
                         <td class="dropup">
-                            <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">Avoki</button>
+                            <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false"><img src="images/sword.png"><img src="images/yellowskull.png"> Avoki</button><img src="images/yellowskull.png"><img src="images/sword.png">
                             <ul class="dropdown-menu z-3 bg-secondary text-center fw-bold">
                                 <li><small class="dropdown-item-text text-light">bolaxadomar</small></li>
                                 <li><small class="dropdown-item-text text-light">CristianKD_</small></li>
@@ -223,12 +223,12 @@
                     </tr>
                     <tr class="text-center align-middle">
                         <td class="text-warning">NEW YORK (N)</td>
-                        <td>ChristDior</td>
+                        <td><img src="images/whiteskull.png"> ChristDior <img src="images/whiteskull.png"></td>
                         <td>60</td>
                     </tr>
                     <tr class="text-center align-middle">
                         <td class="text-warning">JERUSALEM (N)</td>
-                        <td>Senku_Jo</td>
+                        <td><img src="images/whiteskull.png"> Senku_Jo <img src="images/whiteskull.png"></td>
                         <td>55</td>
                     </tr>
                 </tbody>
