--- a/horde.html
+++ b/horde.html
@@ -167,13 +167,13 @@
                 <tbody class="font-monospace">
                     <tr class="text-center align-middle">
                         <td class="text-danger">XL TOKYO (H)</td>
-                        <td><img src="images/whiteskull.png"> SiberianPsych0 <img src="images/whiteskull.png"></td>
+                        <td><img src="images/whiteskull.png" class="shake"> SiberianPsych0 <img src="images/whiteskull.png" class="shake"></td>
                         <td>57</td>
                     </tr>
                     <tr class="text-center align-middle">
                         <td class="text-danger">XL ROME (H)</td>
                         <td class="dropup">
-                            <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false"><img src="images/sword.png"><img src="images/yellowskull.png"> Horde Legends Team</button><img src="images/yellowskull.png"><img src="images/sword.png">
+                            <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false"><img src="images/sword.png" class="heartbeat"> <img src="images/yellowskull.png"> Horde Legends Team</button><img src="images/yellowskull.png"> <img src="images/sword.png" class="heartbeat">
                             <ul class="dropdown-menu z-3 bg-secondary text-center fw-bold">
                                 <li><small class="dropdown-item-text text-light">gogu7382</small></li>
                                 <li><small class="dropdown-item-text text-light">LegioX Wintersky</small></li>
@@ -186,33 +186,33 @@
                     </tr>
                     <tr class="text-center align-middle">
                         <td class="text-danger">SOUTH KOREA (H)</td>
-                        <td><img src="images/oni.png"><img src="images/redskull.png"> 睡姿决定发型 <img src="images/redskull.png"><img src="images/oni.png"></td>
+                        <td><img src="images/shuriken.png" class="rotate-center2"><img src="images/redskull.png"> 睡姿决定发型 <img src="images/redskull.png"><img src="images/shuriken.png" class="rotate-center2"></td>
                         <td><small class="h4 text-danger text-bold">86</small></td>
                     </tr>
                     <tr class="text-center align-middle">
                         <td class="text-danger">NEW YORK (H)</td>
-                        <td><img src="images/oni.png"><img src="images/redskull.png"> 貓白 <img src="images/redskull.png"><img src="images/oni.png"></td>
+                        <td><img src="images/shuriken.png" class="rotate-center2"><img src="images/redskull.png"> 貓白 <img src="images/redskull.png"><img src="images/shuriken.png" class="rotate-center2"></td>
                         <td><small class="h4 text-danger text-bold">82</small></td>
                     </tr>
                     <tr class="text-center align-middle">
                         <td class="text-danger">JERUSALEM (H)</td>
-                        <td><img src="images/oni.png"><img src="images/redskull.png"> 睡姿决定发型 <img src="images/redskull.png"><img src="images/oni.png"></td>
+                        <td><img src="images/shuriken.png" class="rotate-center2"><img src="images/redskull.png"> 睡姿决定发型 <img src="images/redskull.png"><img src="images/shuriken.png" class="rotate-center2"></td>
                         <td><small class="h4 text-danger text-bold">81</small></td>
                     </tr>
                     <tr class="text-center align-middle">
                         <td class="text-warning">XL TOKYO (N)</td>
-                        <td><img src="images/whiteskull.png"> Senku_Jo <img src="images/whiteskull.png"></td>
+                        <td><img src="images/whiteskull.png" class="shake"> Senku_Jo <img src="images/whiteskull.png" class="shake"></td>
                         <td>66</td>
                     </tr>
                     <tr class="text-center align-middle">
                         <td class="text-warning">XL ROME (N)</td>
-                        <td><img src="images/whiteskull.png"> E7S4 <img src="images/whiteskull.png"></td>
+                        <td><img src="images/whiteskull.png" class="shake"> E7S4 <img src="images/whiteskull.png" class="shake"></td>
                         <td>42</td>
                     </tr>
                     <tr class="text-center align-middle">
                         <td class="text-warning">SOUTH KOREA (N)</td>
                         <td class="dropup">
-                            <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false"><img src="images/sword.png"><img src="images/yellowskull.png"> Avoki</button><img src="images/yellowskull.png"><img src="images/sword.png">
+                            <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false"><img src="images/sword.png" class="heartbeat"> <img src="images/yellowskull.png"> Avoki</button><img src="images/yellowskull.png"> <img src="images/sword.png" class="heartbeat">
                             <ul class="dropdown-menu z-3 bg-secondary text-center fw-bold">
                                 <li><small class="dropdown-item-text text-light">bolaxadomar</small></li>
                                 <li><small class="dropdown-item-text text-light">CristianKD_</small></li>
@@ -223,12 +223,12 @@
                     </tr>
                     <tr class="text-center align-middle">
                         <td class="text-warning">NEW YORK (N)</td>
-                        <td><img src="images/whiteskull.png"> ChristDior <img src="images/whiteskull.png"></td>
+                        <td><img src="images/whiteskull.png" class="shake"> ChristDior <img src="images/whiteskull.png" class="shake"></td>
                         <td>60</td>
                     </tr>
                     <tr class="text-center align-middle">
                         <td class="text-warning">JERUSALEM (N)</td>
-                        <td><img src="images/whiteskull.png"> Senku_Jo <img src="images/whiteskull.png"></td>
+                        <td><img src="images/whiteskull.png" class="shake"> Senku_Jo <img src="images/whiteskull.png" class="shake"></td>
                         <td>55</td>
                     </tr>
                 </tbody>
