Disabled unavailable features

--- a/horde.html
+++ b/horde.html
@@ -43,10 +43,10 @@
     <div class="d-flex justify-content-center my-4">
         <div class="btn-group" role="group" aria-label="extreme">
 
-            <input type="radio" class="btn-check" name="btnradio2" id="speedrunE">
+            <input type="radio" class="btn-check" name="btnradio2" id="speedrunE" disabled>
             <label class="btn btn-outline-light" for="speedrunE">Speedrun (Map)<br><img src="images/redskull.png"><img src="images/redskull.png"><img src="images/redskull.png"><img src="images/redskull.png"><img src="images/redskull.png"></label>
 
-            <input type="radio" class="btn-check" name="btnradio2" id="speedrunE2">
+            <input type="radio" class="btn-check" name="btnradio2" id="speedrunE2" disabled>
             <label class="btn btn-outline-light" for="speedrunE2">Speedrun (Chapter) <br><img src="images/redskull.png"><img src="images/redskull.png"><img src="images/redskull.png"><img src="images/redskull.png"><img src="images/redskull.png"></label>
         </div>
     </div>
