--- a/horde.html
+++ b/horde.html
@@ -14,17 +14,18 @@
 
 <body>
     <!-- NAV Bar -->
-    <nav class="navbar bg-dark">
-        <div class="container navbar-dark justify-content-center">
-            <div>
-                <div class="navbar-brand mx-1">HORDE</div>
+    <div class="container-fluid px-0">
+        <nav class="navbar bg-dark">
+            <div class="container navbar-dark justify-content-center">
+                <div>
+                    <div class="navbar-brand mx-1">HORDE</div>
+                </div>
+                <div>
+                    <a href="index.html" class="btn btn-secondary ms-4"><i class="fa-solid fa-arrow-right-to-bracket fa-flip-horizontal fa-lg"></i></a>
+                </div>
             </div>
-            <div>
-                <a href="index.html" class="btn btn-secondary ms-4"><i class="fa-solid fa-arrow-right-to-bracket fa-flip-horizontal fa-lg"></i></a>
-            </div>
-        </div>
-    </nav>
-
+        </nav>
+    </div>
 
     <!-- BODY Content -->
     <div class="d-flex justify-content-center my-4">
@@ -152,7 +153,7 @@
     <!-- CODE DIVISION -->
 
     <div class="BOX0">
-        <div class="col-md-8 col-12 my-4 mx-auto">
+        <div class="col-md-8 col-12 my-4 mx-auto px-2">
             <div>
                 <div class="text-light h2 d-flex justify-content-center align-items-center my-4 font-monospace">HORDE LEADERBOARD</div>
             </div>
