Testing downsizing table-sm

--- a/horde.html
+++ b/horde.html
@@ -157,7 +157,7 @@
             <div>
                 <div class="text-light h2 d-flex justify-content-center align-items-center my-4 font-monospace">HORDE LEADERBOARD</div>
             </div>
-            <table class="table table-striped table-borderless rounded-5 table-dark">
+            <table class="table table-sm table-striped table-borderless rounded-5 table-dark">
                 <thead>
                     <tr class="text-center align-middle font-monospace fs-5">
                         <th scope="col" class="text-info">MAP</th>
