Finalized regular skulls

--- a/horde.html
+++ b/horde.html
@@ -153,7 +153,7 @@
     <!-- CODE DIVISION -->
 
     <div class="BOX0">
-        <div class="col-md-8 col-12 my-4 mx-auto px-2">
+        <div class="col-md-8 col-12 my-4 mx-auto">
             <div>
                 <div class="text-light h2 d-flex justify-content-center align-items-center my-4 font-monospace">HORDE LEADERBOARD</div>
             </div>
@@ -174,7 +174,7 @@
                     <tr class="text-center align-middle">
                         <td class="text-danger">XL ROME (H)</td>
                         <td class="dropup">
-                            <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false"><img src="images/sword.png" class="heartbeat"> <img src="images/yellowskull.png" class="vibrate"> Horde Legends Team</button>
+                            <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false"><img src="images/yellowskull.png" class="vibrate"> Horde Legends Team</button>
                             <ul class="dropdown-menu z-3 bg-secondary text-center fw-bold">
                                 <li><small class="dropdown-item-text text-light">gogu7382</small></li>
                                 <li><small class="dropdown-item-text text-light">LegioX Wintersky</small></li>
@@ -187,17 +187,17 @@
                     </tr>
                     <tr class="text-center align-middle">
                         <td class="text-danger">SOUTH KOREA (H)</td>
-                        <td><img src="images/shuriken.png" class="rotate-center2"><img src="images/redskull.png" class="flick"> 睡姿决定发型</td>
+                        <td><img src="images/redskull.png" class="flick"> 睡姿决定发型</td>
                         <td><small class="h4 text-danger text-bold">86</small></td>
                     </tr>
                     <tr class="text-center align-middle">
                         <td class="text-danger">NEW YORK (H)</td>
-                        <td><img src="images/shuriken.png" class="rotate-center2"><img src="images/redskull.png" class="flick"> 貓白</td>
+                        <td><img src="images/redskull.png" class="flick"> 貓白</td>
                         <td><small class="h4 text-danger text-bold">82</small></td>
                     </tr>
                     <tr class="text-center align-middle">
                         <td class="text-danger">JERUSALEM (H)</td>
-                        <td><img src="images/shuriken.png" class="rotate-center2"><img src="images/redskull.png" class="flick"> 睡姿决定发型</td>
+                        <td><img src="images/redskull.png" class="flick"> 睡姿决定发型</td>
                         <td><small class="h4 text-danger text-bold">81</small></td>
                     </tr>
                     <tr class="text-center align-middle">
@@ -213,7 +213,7 @@
                     <tr class="text-center align-middle">
                         <td class="text-warning">SOUTH KOREA (N)</td>
                         <td class="dropup">
-                            <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false"><img src="images/sword.png" class="heartbeat"> <img src="images/yellowskull.png" class="vibrate"> Avoki</button>
+                            <button class="btn dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false"><img src="images/yellowskull.png" class="vibrate"> Avoki</button>
                             <ul class="dropdown-menu z-3 bg-secondary text-center fw-bold">
                                 <li><small class="dropdown-item-text text-light">bolaxadomar</small></li>
                                 <li><small class="dropdown-item-text text-light">CristianKD_</small></li>
