Completed easy entry scripting

--- a/horde.html
+++ b/horde.html
@@ -30,7 +30,7 @@
     <!-- BODY Content -->
     <div class="d-flex justify-content-center my-4">
         <div class="btn-group" role="group" aria-label="horde">
-            <input type="radio" class="btn-check" name="btnradio" id="btnradio0" checked>
+            <input type="radio" class="btn-check" name="btnradio" id="btnradio0">
             <label class="btn btn-outline-light" for="btnradio0">BRIEF</label>
 
             <input type="radio" class="btn-check" name="btnradio" id="btnradio1">
@@ -44,7 +44,7 @@
     <div class="d-flex justify-content-center my-4">
         <div class="btn-group" role="group" aria-label="extreme">
 
-            <input type="radio" class="btn-check" name="btnradio2" id="speedrunE" disabled>
+            <input type="radio" class="btn-check" name="btnradio2" id="speedrunE" checked>
             <label class="btn btn-outline-light" for="speedrunE">Speedrun (Map)<br><img src="images/redskull.png"><img src="images/redskull.png"><img src="images/redskull.png"><img src="images/redskull.png"><img src="images/redskull.png"></label>
 
             <input type="radio" class="btn-check" name="btnradio2" id="speedrunE2" disabled>
@@ -54,41 +54,17 @@
 
     <!-- CODE DIVISION -->
     <div class="BOX3">
-        <!-- <div class="col-md-8 col-12 my-4 mx-auto px-3">
+        <div class="col-md-8 col-12 my-4 mx-auto px-3">
             <table class="table table-striped table-borderless rounded-5 table-dark">
                 <thead>
                     <tr class="align-middle font-monospace fs-5">
                         <th scope="col" class="text-info">Map</th>
                         <th scope="col" class="text-info">Player</th>
-                        <th scope="col" class="text-info">Time</th>
+                        <th scope="col" class="text-info">Wave</th>
                         <th scope="col" class="text-info">Src</th>
                     </tr>
                 </thead>
-                <tbody class="font-monospace">
-                    <tr>
-                        <td>TOKYO <i class="fa-solid fa-people-group text-success"></i></td>
-                        <td>SiberianPsych0</td>
-                        <td>28<small>m</small> 42<small>s</small></td>
-                        <td><a href="https://www.youtube.com/watch?v=AiV7wZiSWa0&ab_channel=SiberianPsych0" target="_blank">Full</a></td>
-                    </tr>
-                    <tr>
-                        <td>TOKYO <i class="fa-solid fa-people-group text-success"></i></td>
-                        <td>Lucy#64</td>
-                        <td>29<small>m</small> 52<small>s</small></td>
-                        <td><a href="https://www.youtube.com/watch?v=KYU_-6Kd1MY&ab_channel=%E3%82%8B%E3%83%BC%E3%81%97%E3%81%83" target="_blank">Full</a></td>
-                    </tr>
-                    <tr>
-                        <td>TOKYO <i class="fa-solid fa-people-group text-success"></i></td>
-                        <td>ShyKool</td>
-                        <td>33<small>m</small> 23<small>s</small></td>
-                        <td><a href="https://www.youtube.com/watch?v=QBW4TxRAulQ&ab_channel=shythe" target="_blank">Full</a></td>
-                    </tr>
-                    <tr>
-                        <td>TOKYO <i class="fa-solid fa-people-group text-success"></i></td>
-                        <td>CherryNomad</td>
-                        <td>39<small>m</small> 27<small>s</small></td>
-                        <td><a href="https://www.youtube.com/watch?v=aKsYg8Ob99Q&ab_channel=CherryNomad" target="_blank">Full</a></td>
-                    </tr>
+                <tbody class="font-monospace table-ext-m">
                 </tbody>
             </table>
 
@@ -97,20 +73,20 @@
                 <div class="card-body">
                     <p class="card-text"> • Start: After Initial Cutscene.<br> • End: Final Objective Completion.</p>
                 </div>
-            </div> -->
-
-        <div class="card w-50 my-4 text-bg-warning mx-auto">
-            <h5 class="card-header text-center">Under Maintenance </h5>
-            <div class="card-body">
-                <p class="card-text text-center">LACK OF PLAYERBASE & SUBMISSION. WILL REVIVE WHEN DEMAND RISE.</p>
             </div>
-        </div>
 
-    </div>
+            <div class="card w-50 my-4 text-bg-warning mx-auto">
+                <h5 class="card-header text-center">Under Maintenance </h5>
+                <div class="card-body">
+                    <p class="card-text text-center">Testing Page</p>
+                </div>
+            </div>
+
+        </div>
     </div>
     <!-- CODE DIVISION -->
     <div class="BOX4">
-        <!-- <div class="col-md-8 col-12 my-4 mx-auto">
+        <div class="col-md-8 col-12 my-4 mx-auto">
             <table class="table table-striped table-borderless rounded-5 table-dark">
                 <thead>
                     <tr class="align-middle font-monospace fs-5">
@@ -142,11 +118,11 @@
                     <p class="card-text"> • Start: After Initial Cutscene.<br> • End: Final Objective Completion.</p>
                 </div>
             </div>
-        </div> -->
+        </div>
         <div class="card w-50 my-4 text-bg-warning mx-auto">
             <h5 class="card-header text-center">Under Maintenance </h5>
             <div class="card-body">
-                <p class="card-text text-center">LACK OF PLAYERBASE & SUBMISSION. WILL REVIVE WHEN DEMAND RISE.</p>
+                <p class="card-text text-center">Testing Page</p>
             </div>
         </div>
     </div>
