--- a/horde.html
+++ b/horde.html
@@ -30,7 +30,7 @@
     <!-- BODY Content -->
     <div class="d-flex justify-content-center my-4">
         <div class="btn-group" role="group" aria-label="horde">
-            <input type="radio" class="btn-check" name="btnradio" id="btnradio0">
+            <input type="radio" class="btn-check" name="btnradio" id="btnradio0" checked>
             <label class="btn btn-outline-light" for="btnradio0">BRIEF</label>
 
             <input type="radio" class="btn-check" name="btnradio" id="btnradio1">
@@ -44,7 +44,7 @@
     <div class="d-flex justify-content-center my-4">
         <div class="btn-group" role="group" aria-label="extreme">
 
-            <input type="radio" class="btn-check" name="btnradio2" id="speedrunE" checked>
+            <input type="radio" class="btn-check" name="btnradio2" id="speedrunE">
             <label class="btn btn-outline-light" for="speedrunE">Speedrun (Map)<br><img src="images/redskull.png"><img src="images/redskull.png"><img src="images/redskull.png"><img src="images/redskull.png"><img src="images/redskull.png"></label>
 
             <input type="radio" class="btn-check" name="btnradio2" id="speedrunE2" disabled>
@@ -68,17 +68,9 @@
                 </tbody>
             </table>
 
-            <div class="card w-50 my-4 text-bg-warning mx-auto">
-                <h5 class="card-header text-center">Speedrun: Criteria </h5>
+            <div class="card w-50 my-4 text-bg-danger mx-auto">
                 <div class="card-body">
-                    <p class="card-text"> • Start: After Initial Cutscene.<br> • End: Final Objective Completion.</p>
-                </div>
-            </div>
-
-            <div class="card w-50 my-4 text-bg-warning mx-auto">
-                <h5 class="card-header text-center">Under Maintenance </h5>
-                <div class="card-body">
-                    <p class="card-text text-center">Testing Page</p>
+                    <p class="card-text text-center fw-bold">Testing Page: Script Testing For Easy Entry</p>
                 </div>
             </div>
 
