--- a/weapon_pages/stats/t3repeat.html
+++ b/weapon_pages/stats/t3repeat.html
@@ -73,10 +73,10 @@
         <div class="col-md-6 col-12">
             <div class="d-flex justify-content-between">
                 <div class="text-white">Power</div>
-                <div class="text-white power-value">7</div>
+                <div class="text-white power-value">9</div>
             </div>
             <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="height: 20px;">
-                <div class="progress-bar power-bar progress-bar-striped progress-bar-animated bg-secondary text-warning" style="width: 70%"></div>
+                <div class="progress-bar power-bar progress-bar-striped progress-bar-animated bg-secondary text-warning" style="width: 90%"></div>
             </div>
             <div class="d-flex justify-content-between">
                 <div class="text-white">Accuracy</div>
@@ -136,7 +136,7 @@
             <label class="list-group-item list-group-item-danger d-flex gap-2">
                 <input type="radio" name="uniquePerk" id="">
                 <div>Hand Dexterity
-                    <small class="d-block text-body-secondary">Reload 2 rounds at a time.</small>
+                    <small class="d-block text-body-secondary">Reload 3 rounds at a time.</small>
                 </div>
             </label>
 
@@ -161,7 +161,7 @@
             <label class="list-group-item list-group-item-warning d-flex gap-2">
                 <input type="checkbox" name="commonPerk" id="nod3">
                 <div>Custom Barrel
-                    <small class="d-block text-body-secondary">+1 Accuracy, -10% Damage.</small>
+                    <small class="d-block text-body-secondary">+1 Accuracy, +10% Damage.</small>
                 </div>
             </label>
             <label class="list-group-item list-group-item-warning d-flex gap-2">
